validator_derive/tests/compile-fail/unsupported_field_type.rs
use validator::Validate;

#[derive(Validate)]
struct Values {
    values: [u8; 10],
}

fn main() {}
